Made models loadable through p2.py

--- a/part2/p2.ipynb
+++ b/part2/p2.ipynb
@@ -368,6 +368,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------- 6. Save the model --------\n",
+    "model.save('part2_bidierectional_model.h5')\n",
+    "model2.save('part2_vanilla_model.h5')\n",
+    "\n",
+    "#save tokenizer\n",
+    "import json\n",
+    "tokenizer_json = tokenizer.to_json()\n",
+    "with open('tokenizer.json', 'w') as f:\n",
+    "    json.dump(tokenizer_json, f)\n",
+    "\n",
+    "#save embedding matrix\n",
+    "np.save('embedding_matrix.npy', embedding_matrix)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
